plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'top.keir.mybatis'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenLocal()
    maven { url = uri('https://maven.aliyun.com/repository/public') }
    mavenCentral()
}

dependencies {
    implementation("com.github.xiaoymin:knife4j-openapi3-jakarta-spring-boot-starter:4.4.0")
    implementation('org.dromara.hutool:hutool-all:6.0.0-M21')
    implementation('com.alibaba.fastjson2:fastjson2:2.0.57')
    implementation('com.baomidou:mybatis-plus-spring-boot3-starter:3.5.12')
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
//    runtimeOnly 'com.h2database:h2'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testCompileOnly('org.projectlombok:lombok')
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor('org.projectlombok:lombok')
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs += [
            '-Djdk.instrument.traceUsage',
            '-XX:+EnableDynamicAgentLoading'
    ]
}
